gl33-master/src/test/deca/context/invalid/other/retourIncompatible7.deca
// Test de contexte invalide : valeur de retour fausse (float au lieu de boolean)

class MyClass{

    boolean isPos(int a){
      if(a > 0){
        return 1.1;
        }
      else{
        return 0.1;
        }
    }
}

{
    MyClass m = new MyClass();
    boolean x = m.isPos(4);
}
